--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ html {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+  
 }
 
 header {
@@ -18,10 +19,13 @@ header {
   align-items: center;
   padding: 20px 50px;
   background: linear-gradient(90deg, #1a1a2e, #162447);
-  box-shadow: 0 4px 10px rgba(0,0,0,0.5);
   position: sticky;
   top: 0;
   z-index: 100;
+  border-bottom: 2px solid #003b59;
+  border-radius: 100px;  
+  border-radius: 100px;  box-shadow: 0 4px 10px rgba(0,0,0,0.5);
+
 }
 
 .logo {
@@ -29,7 +33,6 @@ header {
   font-size: 28px;
   color: #f5f5f5;
   letter-spacing: 10px;
-
 }
 
 nav ul {
@@ -51,11 +54,12 @@ nav a::after {
   content: '';
   position: absolute;
   width: 0;
-  height: 2px;
-  background: #ffcc00;
+  height: 5px;
+  background: #003b59;
   left: 0;
   bottom: -5px;
   transition: 0.3s;
+
 }
 
 nav a:hover::after {
@@ -75,7 +79,7 @@ main {
   margin: 20px auto;
   background: rgba(0, 0, 0, 0.9);
   padding: 20px;
-  border-radius: 10px;
+  border-radius: 30px;
   font-family: 'Code Mono', monospace;
   border: 2px solid #ffffff;
   backdrop-filter: blur(10px);
@@ -83,13 +87,15 @@ main {
   line-height: 1.6;
   font-size: 18px;
   text-align: justify;
-  margin-bottom: 100px;
+  margin-bottom: 80px;
 }
 
 body {
   font-family: "Pixelify Sans", sans-serif;
   color: #f1f1f1;
   margin: 0;
+  padding: 0;
+  
 }
 h1 {
   text-align: center;
@@ -131,9 +137,12 @@ h3 {
   font-size: 26px;
   margin-top: 20px;
   margin-bottom: 10px;
+  text-align: left;
 }
 h4 {
   font-size: 20px;
   margin-top: 15px;
   margin-bottom: 8px;
+  text-align: left;
 }
+
