--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ header {
   z-index: 100;
   border-bottom: 2px solid #003b59;
   border-radius: 100px;  
-  border-radius: 100px;  box-shadow: 0 4px 10px rgba(0,0,0,0.5);
+  box-shadow: 0 4px 10px rgba(0,0,0,0.5);
 
 }
 
@@ -81,7 +81,7 @@ main {
   padding: 20px;
   border-radius: 30px;
   font-family: 'Code Mono', monospace;
-  border: 2px solid #ffffff;
+  border:  3px solid #003b59;
   backdrop-filter: blur(10px);
   color: #f1f1f1;
   line-height: 1.6;
@@ -99,8 +99,10 @@ body {
 }
 h1 {
   text-align: center;
-  font-size: 36px;
-  margin-bottom: 20px;  
+  font-size: 38px;
+  margin-bottom: 25px;  
+  margin-top: 25px;
+
 }
 .etap {
   border: rgb(41, 41, 41) 1px solid;
@@ -128,21 +130,24 @@ h1 {
   border-radius: 5px;
 }
 h2 {
-  font-size: 33px;
+  font-size: 30px;
   margin-top: 30px;
-  margin-bottom: 15px;
+  margin-bottom: 30px;
   text-align: center;
+  
 }
 h3 {
   font-size: 26px;
   margin-top: 20px;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
   text-align: left;
 }
 h4 {
-  font-size: 20px;
+  font-size: 22px;
   margin-top: 15px;
-  margin-bottom: 8px;
+  margin-bottom: 15px;
   text-align: left;
 }
-
+.redaktor {
+  text-align: left;
+}
